# kittens

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  KittensSerialInputExample.ino  LICENSE  README.md  main.cha
kittens-imgui/: Parameter.h  Processor.h  Status.cpp  SynthBase.h  chain.cpp  chaiscript_glue.cpp  chaiscript_glue.h  clock.cpp  clock.h  configfile.cpp  configfile.h  duktape_glue.cpp  duktape_glue.h  globalstate.h  imguichain.cpp  imguichain.h  kittensinfo.h  logging.cpp  main.cpp  mixer.cpp  mixer.h  parameter.cpp  settings.cpp  settings.h  synth-wavsample.cpp  synth-wavsample.h  util.cpp  util.h
kittens-imgui/chaiscript/: chaiscript_console.cpp  chaiscript_console.h  chaiscript_glue.cpp  chaiscript_glue.h  chaiscript_multiline_console.cpp  chaiscript_multiline_console.h
kittens-imgui/core/: DeviceBase.cpp  DeviceBase.h  Processor.h  Status.cpp  Status.h  SynthBase.cpp  SynthBase.h  clock.cpp  clock.h  input.cpp  input.h  midicontrol.cpp  midicontrol.h  mixer.cpp  mixer.h
kittens-imgui/instrument/: synth-wavsample.cpp  synth-wavsample.h
kittens-imgui/misc/: globalstate.cpp  globalstate.h  logging.h  settings.cpp  settings.h  util.h
libKittens/: Kittens.cpp  Parameter.cpp  Parameter.h  Processor.cpp  Processor.h  Synth.h  SynthBase.cpp  SynthBase.h  chain.cpp  chain.h  clock.cpp  clock.h  kittensinfo.h  mixer.cpp  mixer.h  parameter.cpp  synth-wavsample.cpp  synth-wavsample.h
